// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card component renders base 1`] = `
<body>
  <div>
    <div
      class="grid-item"
      data-testid="card"
    >
      <div
        class="grid-item-wrapper"
      >
        <div
          class="grid-image-top"
        >
          <div>
            <img
              alt=""
              src="php.png"
            />
          </div>
        </div>
        <div
          class="grid-item-content"
        >
          <div
            class="title-wrapper"
          >
            <span
              class="item-title"
            >
              PHP7
               
              <small />
            </span>
          </div>
          <div>
            Web technology
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Card component renders optional subTitle 1`] = `
<body>
  <div>
    <div
      class="grid-item"
      data-testid="card"
    >
      <div
        class="grid-item-wrapper"
      >
        <div
          class="grid-image-top"
        >
          <div>
            <img
              alt=""
              src="php.png"
            />
          </div>
        </div>
        <div
          class="grid-item-content"
        >
          <div
            class="title-wrapper"
          >
            <span
              class="item-title"
            >
              PHP7
               
              <small>
                Some web technology
              </small>
            </span>
          </div>
          <div>
            Web technology
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Card component renders optional technologies 1`] = `
<body>
  <div>
    <div
      class="grid-item"
      data-testid="card"
    >
      <div
        class="grid-item-wrapper"
      >
        <div
          class="grid-image-top"
        >
          <div>
            <img
              alt=""
              src="work_project.png"
            />
          </div>
        </div>
        <div
          class="grid-item-content"
        >
          <div
            class="svg-wrapper"
          >
            <div
              class="svg-item"
            >
              <img
                class="svg-item__icon"
                currentitem="false"
                data-event="click mousestart mouseover"
                data-event-off="mouseout"
                data-for="technologyTip-PHP7"
                data-tip="true"
                src="img/svg/PHP7.svg"
              />
              <div
                class="__react_component_tooltip t945ba53a-d6e0-4f94-ada1-fc4a8b8755a0 place-top type-dark"
                data-id="tooltip"
                id="technologyTip-PHP7"
              >
                <style
                  aria-hidden="true"
                >
                  
  	.t945ba53a-d6e0-4f94-ada1-fc4a8b8755a0 {
	    color: #fff;
	    background: #222;
	    border: 1px solid transparent;
	    border-radius: undefinedpx;
	    padding: 8px 21px;
  	}

  	.t945ba53a-d6e0-4f94-ada1-fc4a8b8755a0.place-top {
        margin-top: -10px;
    }
    .t945ba53a-d6e0-4f94-ada1-fc4a8b8755a0.place-top::before {
        content: "";
        background-color: inherit;
        position: absolute;
        z-index: 2;
        width: 18px;
        height: 10px;
    }
    .t945ba53a-d6e0-4f94-ada1-fc4a8b8755a0.place-top::after {
        content: "";
        position: absolute;
        width: 10px;
        height: 10px;
        border-top-right-radius: undefinedpx;
        border: 1px solid transparent;
        background-color: #222;
        z-index: 1;
        bottom: -6px;
        left: 50%;
        margin-left: -8px;
        transform: rotate(135deg);
    }

    .t945ba53a-d6e0-4f94-ada1-fc4a8b8755a0.place-bottom {
        margin-top: 10px;
    }
    .t945ba53a-d6e0-4f94-ada1-fc4a8b8755a0.place-bottom::before {
        content: "";
        background-color: inherit;
        position: absolute;
        z-index: 2;
        width: 18px;
        height: 10px;
    }
    .t945ba53a-d6e0-4f94-ada1-fc4a8b8755a0.place-bottom::after {
        content: "";
        position: absolute;
        width: 10px;
        height: 10px;
        border-top-right-radius: undefinedpx;
        border: 1px solid transparent;
        background-color: #222;
        z-index: 1;
        top: -6px;
        left: 50%;
        margin-left: -8px;
        transform: rotate(45deg);
    }

    .t945ba53a-d6e0-4f94-ada1-fc4a8b8755a0.place-left {
        margin-left: -10px;
    }
    .t945ba53a-d6e0-4f94-ada1-fc4a8b8755a0.place-left::before {
        content: "";
        background-color: inherit;
        position: absolute;
        z-index: 2;
        width: 10px;
        height: 18px;
    }
    .t945ba53a-d6e0-4f94-ada1-fc4a8b8755a0.place-left::after {
        content: "";
        position: absolute;
        width: 10px;
        height: 10px;
        border-top-right-radius: undefinedpx;
        border: 1px solid transparent;
        background-color: #222;
        z-index: 1;
        right: -6px;
        top: 50%;
        margin-top: -6px;
        transform: rotate(45deg);
    }

    .t945ba53a-d6e0-4f94-ada1-fc4a8b8755a0.place-right {
        margin-left: 10px;
    }
    .t945ba53a-d6e0-4f94-ada1-fc4a8b8755a0.place-right::before {
        content: "";
        background-color: inherit;
        position: absolute;
        z-index: 2;
        width: 10px;
        height: 18px;
    }
    .t945ba53a-d6e0-4f94-ada1-fc4a8b8755a0.place-right::after {
        content: "";
        position: absolute;
        width: 10px;
        height: 10px;
        border-top-right-radius: undefinedpx;
        border: 1px solid transparent;
        background-color: #222;
        z-index: 1;
        left: -6px;
        top: 50%;
        margin-top: -6px;
        transform: rotate(-135deg);
    }
  
                </style>
                PHP7
              </div>
            </div>
            <div
              class="svg-item"
            >
              <img
                class="svg-item__icon"
                currentitem="false"
                data-event="click mousestart mouseover"
                data-event-off="mouseout"
                data-for="technologyTip-React"
                data-tip="true"
                src="img/svg/React.svg"
              />
              <div
                class="__react_component_tooltip t41b8b634-e8fd-485c-9d2c-03f18829c6a2 place-top type-dark"
                data-id="tooltip"
                id="technologyTip-React"
              >
                <style
                  aria-hidden="true"
                >
                  
  	.t41b8b634-e8fd-485c-9d2c-03f18829c6a2 {
	    color: #fff;
	    background: #222;
	    border: 1px solid transparent;
	    border-radius: undefinedpx;
	    padding: 8px 21px;
  	}

  	.t41b8b634-e8fd-485c-9d2c-03f18829c6a2.place-top {
        margin-top: -10px;
    }
    .t41b8b634-e8fd-485c-9d2c-03f18829c6a2.place-top::before {
        content: "";
        background-color: inherit;
        position: absolute;
        z-index: 2;
        width: 18px;
        height: 10px;
    }
    .t41b8b634-e8fd-485c-9d2c-03f18829c6a2.place-top::after {
        content: "";
        position: absolute;
        width: 10px;
        height: 10px;
        border-top-right-radius: undefinedpx;
        border: 1px solid transparent;
        background-color: #222;
        z-index: 1;
        bottom: -6px;
        left: 50%;
        margin-left: -8px;
        transform: rotate(135deg);
    }

    .t41b8b634-e8fd-485c-9d2c-03f18829c6a2.place-bottom {
        margin-top: 10px;
    }
    .t41b8b634-e8fd-485c-9d2c-03f18829c6a2.place-bottom::before {
        content: "";
        background-color: inherit;
        position: absolute;
        z-index: 2;
        width: 18px;
        height: 10px;
    }
    .t41b8b634-e8fd-485c-9d2c-03f18829c6a2.place-bottom::after {
        content: "";
        position: absolute;
        width: 10px;
        height: 10px;
        border-top-right-radius: undefinedpx;
        border: 1px solid transparent;
        background-color: #222;
        z-index: 1;
        top: -6px;
        left: 50%;
        margin-left: -8px;
        transform: rotate(45deg);
    }

    .t41b8b634-e8fd-485c-9d2c-03f18829c6a2.place-left {
        margin-left: -10px;
    }
    .t41b8b634-e8fd-485c-9d2c-03f18829c6a2.place-left::before {
        content: "";
        background-color: inherit;
        position: absolute;
        z-index: 2;
        width: 10px;
        height: 18px;
    }
    .t41b8b634-e8fd-485c-9d2c-03f18829c6a2.place-left::after {
        content: "";
        position: absolute;
        width: 10px;
        height: 10px;
        border-top-right-radius: undefinedpx;
        border: 1px solid transparent;
        background-color: #222;
        z-index: 1;
        right: -6px;
        top: 50%;
        margin-top: -6px;
        transform: rotate(45deg);
    }

    .t41b8b634-e8fd-485c-9d2c-03f18829c6a2.place-right {
        margin-left: 10px;
    }
    .t41b8b634-e8fd-485c-9d2c-03f18829c6a2.place-right::before {
        content: "";
        background-color: inherit;
        position: absolute;
        z-index: 2;
        width: 10px;
        height: 18px;
    }
    .t41b8b634-e8fd-485c-9d2c-03f18829c6a2.place-right::after {
        content: "";
        position: absolute;
        width: 10px;
        height: 10px;
        border-top-right-radius: undefinedpx;
        border: 1px solid transparent;
        background-color: #222;
        z-index: 1;
        left: -6px;
        top: 50%;
        margin-top: -6px;
        transform: rotate(-135deg);
    }
  
                </style>
                React
              </div>
            </div>
          </div>
          <div
            class="title-wrapper"
          >
            <span
              class="item-title"
            >
              Work Project
               
              <small />
            </span>
          </div>
          <div />
        </div>
      </div>
    </div>
  </div>
</body>
`;
